--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,9 +2,9 @@ name: lint
 
 on:
   push:
-    branches: [main, master]
+    branches: [main]
   pull_request:
-    branches: [main, master]
+    branches: [main]
 
 jobs:
   lint:
@@ -20,6 +20,4 @@ jobs:
       - uses: Swatinem/rust-cache@v1
       - name: Lint
         run: |
-          cargo build
-          cargo test
           cargo fmt -- --check
