--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,4 +26,4 @@ jobs:
         run: |
           cargo fmt -- --check
           rustup component add clippy
-          cargo clippy
+          cargo clippy -- -D warnings
